added css for heading,input and submit button

--- a/index.css
+++ b/index.css
@@ -4,5 +4,132 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+.Parentbody {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  background-color: #6d9ac4;
+  justify-content: center;
+  align-items: center;
+}
+.box {
+  height: 500px;
+  width: 400px;
+  background-color: white;
+  /* border: 2px solid blue; */
+  border-radius: 8px;
+  padding: 1.5rem;
+  box-shadow: 2px 2px 8px rgb(48, 47, 47);
+}
+.heading {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  color: #4e4e4e;
+  font-weight: 500;
+}
+.email {
+  display: flex;
+  /* border: 2px solid red; */
+  height: 15%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.email-heading {
+  color: #4e4e4e;
+  margin-bottom: 5px;
+  font-weight: 500;
+}
+.password {
+  display: flex;
+  /* border: 2px solid red; */
+  margin-top: 1rem;
+  height: 15%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.password-heading {
+  color: #4e4e4e;
+  margin-bottom: 5px;
+  font-weight: 500;
+}
+.input {
+  border: 1.5px solid #ccc;
+  border-radius: 4px;
+  height: 60%;
+}
+.login-button {
+  display: flex;
+  height: 10%;
+  width: 100%;
+  border-radius: 8px;
+  margin-top: 1rem;
+  outline: none;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1rem;
+  color: white;
+  background-color: #ee5684;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+.line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* border: 2px solid blue; */
+  margin-top: 1rem;
+}
+.line-through {
+  border: 0.5px solid #ccc;
+  /* height: 5px; */
+  width: 100%;
+}
+.line-span {
+  border: 1.2px solid #ccc;
+  padding: 5px;
+  color: #ccc;
+  border-radius: 4px;
+}
+.button-links {
+  display: flex;
+  /* border: 2px solid red; */
+  height: 4rem;
+  width: 100%;
+  margin-top: 1rem;
+  justify-content: center;
+  align-items: center;
+}
 
+.google-btn {
+  border: 2px solid red;
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  outline: none;
+  background-color: white;
+  color: green;
+}
+.facebook-btn {
+  border: 2px solid red;
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  outline: none;
+  background-color: white;
+}
+.linkedin-btn {
+  border: 2px solid red;
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  outline: none;
+  background-color: white;
+}
 
